[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://intro/picture/close.png" type="Texture" id=2]
[ext_resource path="res://intro/script/save_files.gd" type="Script" id=3]
[ext_resource path="res://intro/saving_file.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 7
font_data = ExtResource( 5 )

[node name="save_files" type="Node"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_right = 310.0
margin_bottom = 170.0
custom_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 300.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "save files"
align = 1

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 300.0
margin_bottom = 68.0

[node name="Auto" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 300.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "auto save file"

[node name="File1" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 300.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "file 1"

[node name="file2" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
margin_top = 128.0
margin_right = 300.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 2 )
text = "file 2"

[node name="close" type="TextureButton" parent="Panel"]
margin_left = 296.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 18.0
texture_normal = ExtResource( 2 )

[node name="textbox" type="Panel" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 8.0
margin_right = 148.0
margin_bottom = 45.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Panel/textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 4 )
text = "Game has been saved"
align = 1
valign = 1
autowrap = true

[node name="Timer" type="Timer" parent="Panel/textbox"]
one_shot = true

[node name="saving_file" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Panel/close" to="." method="_on_close_pressed"]
[connection signal="timeout" from="Panel/textbox/Timer" to="." method="_on_Timer_timeout"]
